--- a/src/styles.css
+++ b/src/styles.css
@@ -24,11 +24,16 @@ input {
   height: 48px;
   background-color: transparent;
   color: var(--mystore-text-color);
-  border: 3px solid var(--mystore-primary-color-contrast);
+  border: 2px solid var(--mystore-primary-color-contrast);
   font-family: 'Jost', sans-serif;
   padding: 4px;
-  margin-bottom: 16px;
+  margin-top: 16px;
   width: 100%;
+}
+
+input:invalid {
+  border: 2px solid red;
+  background-color: rgba(255, 0, 0, 0.1);
 }
 
 button {
